crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m233_super_22_in_1_p1.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-233-BMC-42in1/Super 22-in-1 [p1].nes
rom_sha256=22ab5f67baef6fc7c712f4ba349dd69b33dc49b7d0e92accc1cee23361ec130a
frames=600
fb_bytes=245760
cycles=17838521
audio_samples=439524
audio_fnv1a64=c86e79ae2424c83a
checkpoint f600 fb_fnv1a64=f666a74016aae945
