crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m244_asmik_kun_land_t1.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-244-Decathlon/Asmik-kun Land (J) [t1].nes
rom_sha256=039ccc715be6e7944aa3616b15633c380758e5d8cb77926f1ff3d24e91028a2d
frames=600
fb_bytes=245760
cycles=17838522
audio_samples=439524
audio_fnv1a64=9071d7aa1b427024
checkpoint f600 fb_fnv1a64=df699e41684282bb
