crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m245_di_guo_shi_dai.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-245-WaixingMMC3/Di Guo Shi Dai (Age of Empires) (ES-1070) (Ch).zip
rom_sha256=d21052d50c990c56f2484331870082df96a1130892c42f2a55d8715458434044
frames=600
fb_bytes=245760
cycles=17838535
audio_samples=439524
audio_fnv1a64=569a546cedaa6d40
checkpoint f600 fb_fnv1a64=8b3190e4dac4b3f0
