crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m246_feng_shen_bang.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-246-FongShenBang/Feng Shen Bang (Asia) (Ja) (Unl).nes
rom_sha256=87d4ecee39c064b1b3fe3524969410fde7d05f61ca2a92be26356696c3117c0a
frames=600
fb_bytes=245760
cycles=17838522
audio_samples=439524
audio_fnv1a64=1a0959882564b4c9
checkpoint f600 fb_fnv1a64=5dab7e8dd66b2593
