crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m28_witchnwiz_2021_02_22_nes_dev_v_1_0_0.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-028-Action53/witchnwiz_2021_02_22_nes_dev_v_1_0_0.nes
rom_sha256=5ff6c6c633683e43966c24205747a7526bbaa11f5bb0174ef7f33abc20411e16
frames=600
fb_bytes=245760
cycles=17838530
audio_samples=439524
audio_fnv1a64=eca11e976805b06f
checkpoint f600 fb_fnv1a64=de3a3c2b8773396f
