crates/rustynes-test-harness/tests/snapshots/external_extended__extended_m30_chu_liu_xiang.snap
---
source: crates/rustynes-test-harness/tests/external_extended.rs
expression: text
---
rom=mapper-030-UNROM512/Chu Liu Xiang (Ch) (Wxn).nes
rom_sha256=89f5967e51425b96fd5a3f8cc30ceb137f5ad65c8690885af964ac5dd5fe372c
frames=600
fb_bytes=245760
cycles=176467
audio_samples=4331
audio_fnv1a64=3e8519373288b5cb
checkpoint f600 fb_fnv1a64=89ee4c476c97a325
